fixed menu page glitch on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -149,7 +149,7 @@ footer {
 /* Contact page */
 
 #contact {
-	text-align: left;
+	text-align: center;
 }
 
 #map {
@@ -182,5 +182,17 @@ footer {
 	}
 	h2 {
 		font-size: x-large;
+	}
+	.menu-card {
+		padding: 1em;
+		width: 12em;
+	}
+	.description {
+		font-size: 0.82em;
+		margin: 0.3em;
+	}
+	#map {
+		margin-bottom: 0.5em;
+		max-width: 15em;
 	}
 }
